...
  Widget build(BuildContext context, WidgetRef ref) {
    LocalUser currentUser = ref.watch(userProvider);
    return Scaffold(
      appBar: AppBar(
        title: const Image(image: AssetImage('assets/images/twitter_logo.png'), width: 50,),
        leading: Builder(
          key: ValueKey("profilePic"),
          builder: (context) {
            return GestureDetector(
              onTap: () => {
                Scaffold.of(context).openDrawer()
              },
              child: Padding(
...
              title: Text("Settings"),
              onTap: (){
                Navigator.of(context).pop();
                Navigator.push(context, MaterialPageRoute(builder: (context) => Settings()));
              },),
            ListTile(
              key: ValueKey("signout"),
              title: Text("Sign out"),
              onTap: () {
                FirebaseAuth.instance.signOut();
                ref.read(userProvider.notifier).logout();
              },
            )
...
